codimd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codimd
  labels:
    app.kubernetes.io/name: codimd

spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: codimd
  template:
    metadata:
      labels:
        app.kubernetes.io/name: codimd
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - las211.tokyotech.org
              weight: 1

      containers:
        - name: codimd
          image: ghcr.io/traptitech/codimd:latest@sha256:90b3c8de6b6f593c8f5d9b8d8c21ff6ab6a6b98714e9f051750d06a7ff3f739d
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1500
          ports:
            - containerPort: 3000
              name: http
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "1536Mi"
          volumeMounts:
            - name: codimd-config
              mountPath: /home/hackmd/app/config.json
              subPath: config.json
              readOnly: true
      volumes:
        - name: codimd-config
          secret:
            secretName: codimd-secret
            items:
              - key: config.json
                path: config.json
