codimd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: codimd
spec:
  selector:
    app.kubernetes.io/name: codimd
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: codimd-uploads
spec:
  type: ExternalName
  externalName: object-storage.tyo1.conoha.io
  ports:
    - name: https
      port: 443
