codimd/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: codimd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`md.trap.jp`) && PathPrefix(`/uploads`)
      kind: Rule
      priority: 20
      middlewares:
        - name: codimd-uploads-rewrite
        - name: codimd-uploads-headers
      services:
        - name: codimd-uploads
          port: 443
          passHostHeader: false
          scheme: https

    - match: Host(`md.trap.jp`)
      kind: Rule
      priority: 10
      services:
        - name: codimd
          port: 3000
  tls:
    secretName: codimd-tls
